--- a/hypr/waybar/style.css
+++ b/hypr/waybar/style.css
@@ -11,7 +11,7 @@
 }
 
 window#waybar {
-  background-color: rgba(0, 0, 0, 0.0);
+  background-color: rgba(0, 0, 0, 0.9);
   color: #ffffff;
 }
 
@@ -64,15 +64,15 @@ window#waybar {
 }
 
 #window {
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 8px 12px;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  padding: 4px 12px;
   min-width: 200px;
   border-bottom-right-radius: 25px;
   color: white;
 }
 
 #workspaces {
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0.5); */
   padding: 0px 8px;
   /* border-radius: 25px; */
   border-bottom-left-radius: 25px;
@@ -81,9 +81,9 @@ window#waybar {
 }
 
 #clock {
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 8px 12px;
-  border-bottom-left-radius: 25px;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  padding: 4px 14px;
+  border-bottom-left-radius: 15px;
   color: white;
 }
 
