--- a/hypr/wofi/style.css
+++ b/hypr/wofi/style.css
@@ -1,33 +1,38 @@
 window {
   margin: 0px;
-  border: 2px solid #4c566a;
-  border-radius: 5px;
-  background-color: #3b4252;
+  border: 2px solid #303030;
+  border-radius: 25px;
+  background-color: #080808;
   font-family: monospace;
-  font-size: 12px;
+  font-size: 16px;
 }
 
 #input {
   margin: 5px;
-  border: 1px solid #3b4252;
-  color: #eceff4;
-  background-color: #3b4252;
+  border: 1px solid #303030;
+  border-radius: 25px;
+  color: #c6c6c6;
+  background-color: #303030;
 }
 
 #input image {
-  color: #eceff4;
+  color: #303030;
 }
 
 #inner-box {
   margin: 5px;
   border: none;
-  background-color: #3b4252;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 25px;
+  background-color: #080808;
 }
 
 #outer-box {
   margin: 5px;
   border: none;
-  background-color: #3b4252;
+  background-color: #080808;
+  border-radius: 25px;
 }
 
 #scroll {
@@ -38,15 +43,17 @@ window {
 #text {
   margin: 5px;
   border: none;
-  color: #eceff4;
+  color: #c6c6c6;
 }
 
 #entry:selected {
-  background-color: #4c566a;
+  background-color: #80a0ff;
   font-weight: normal;
+  border-radius: 25px;
 }
 
 #text:selected {
-  background-color: #4c566a;
+  background-color: #80a0ff;
+  color: #080808;
   font-weight: normal;
 }
